# CAlendar

./: .gitignore  Diagrama de gantt.py  README.md  dataBase.db  pyproject.toml  requirements.txt
.github/: CODEOWNERS
Documentacion/: caminoCriticoExplicacion.txt
Documentacion/backend/: api base de datos.md  api manejo de proyectos.md  manejo de actividades.md  manejo de proyectos.md
Documentacion/conceptos/: Diagrama de gantt.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
src/: main.py  setup.py  ~
src/CAlendar.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/GUI/: Input.py  Inputs.py  Interfaz.py  actividades.py  cami_critico.py  centrar_ventana.py  crear_edit_borrarActividades.py  crear_proyectos.py  diagrama_de_gantt.py  feriados.py  funcionesSobreActividad.py  funcionesSobreProyecto.py  librerias.py  navbar.py  nodo.py  ventanaPrincipal.py  ventana_actividades.py
src/backend/: dataBase.py  integracion_web.py
src/backend/comprobaciones/: verificarDependencia.py  verificarEntradas.py
src/backend/dataBase/: __init__.py  activitiesManager.py  dataBase.py  proyectManager.py
src/backend/tests/: actividadInicioFinal.py  test_db.py
src/clases/: __init__.py  actividades.py  clases_cam_critico.py  diagramaGantt.py  feriados.py  proyecto.py  relaciones.py
src/funcionesSobreObjetos/: actividadFunciones.py  proyectoFunciones  proyectoFunciones.py
src/informes/: camino_critico.py  diagramaGantt.py
src/informes/tests/: cam_critico.py  funcion_fecha.py  nuevoNUevo_nuevisimo.py  pruebaFacil.py
src/utilidades/: calendario.py
(+13 files in other folders)
